src/index.css
:root {
  font-family: monospace;
  line-height: 1.5;
  font-weight: 200;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  overflow-x: hidden;
}

.parent {
  width: 100%;
  /* margin: 50px; */
  /* padding: 4rem; */
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(5, 1fr);
  grid-column-gap: 50px;
  grid-row-gap: 25px;
  /* border: 1px solid red; */
}

.div1 {
  grid-area: 2 / 1 / 3 / 2;
  border: 1px solid rgb(255, 255, 255);
  padding: 1rem;
}
.div2 {
  grid-area: 2 / 2 / 3 / 3;
  border: 1px solid rgb(0, 228, 245);
  padding: 1rem;
}
.div3 {
  grid-area: 2 / 3 / 3 / 4;
  border: 1px solid rgb(21, 255, 0);
  padding: 1rem;
}
.div4 {
  grid-area: 2 / 4 / 3 / 5;
  border: 1px solid rgb(251, 0, 255);
  padding: 1rem;
}
.div6 {
  grid-area: 3 / 1 / 4 / 2;
  border: 1px solid rgb(21, 255, 0);
  padding: 1rem;
}
.div7 {
  grid-area: 3 / 2 / 4 / 3;
  border: 1px solid rgb(0, 238, 255);
  padding: 1rem;
}
.div8 {
  grid-area: 3 / 3 / 4 / 4;
  border: 1px solid red;
  padding: 1rem;
}
.div9 {
  grid-area: 3 / 4 / 4 / 5;
  border: 1px solid rgb(251, 0, 255);
  padding: 1rem;
}
.div10 {
  grid-area: 4 / 1 / 5 / 2;
  border: 1px solid red;
  padding: 1rem;
}
.div11 {
  grid-area: 4 / 2 / 5 / 3;
  border: 1px solid red;
  padding: 1rem;
}
.div12 {
  grid-area: 4 / 3 / 5 / 4;
  border: 1px solid red;
  padding: 1rem;
}
.div13 {
  grid-area: 4 / 4 / 5 / 5;
  border: 1px solid red;
  padding: 1rem;
}
.div14 {
  grid-area: 5 / 1 / 6 / 2;
  border: 1px solid red;
  padding: 1rem;
}
.div15 {
  grid-area: 5 / 2 / 6 / 3;
  border: 1px solid red;
  padding: 1rem;
}
.div16 {
  grid-area: 5 / 3 / 6 / 4;
  border: 1px solid red;
  padding: 1rem;
}
.div17 {
  grid-area: 5 / 4 / 6 / 5;
  border: 1px solid red;
  padding: 1rem;
}
.div18 {
  grid-area: 1 / 2 / 2 / 4;
  border: 1px solid rgb(255, 230, 0);
  padding: 1rem;
  display: flex;
  justify-content: center;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

